# knor

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  hoa.c  hoa.h  hoa.l  hoa.y  hoa2aig.c  hoa2pg.c  hoacheck.c  hoalexer.c  hoalexer.h  hoaparser.c  hoaparser.h  parsertests.c  prepare_se.sh  simplehoa.c  simplehoa.h  tests.c
aiger/: LICENSE
cudd/: LICENSE
examples/: test1.ehoa
libs/: CMakeLists.txt
se/: build.sh  starexec_build  starexec_description.txt
src/: abcminimization.cpp  abcminimization.hpp  aigcircuit.cpp  aigcircuit.hpp  aigencoder.cpp  aigencoder.hpp  aiger.c  aiger.h  aigmaker.cpp  aigmaker.hpp  bddtools.cpp  bddtools.hpp  bisim.cpp  bisim.hpp  gameconstructor.cpp  gameconstructor.hpp  hoa.l  hoa.y  knor.cpp  knor.hpp  simplehoa.h  symgame.cpp  symgame.hpp
test/: check.sh  test.sh
